<resources>
    <string name="app_name" translatable="false">Finance App</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="sample_text" translatable="false">Merhabalar</string>
    <string name="sample_medium_text" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</string>
    <string name="sample_long_text" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="sample_paragraph" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="about_application">About Application</string>
    <string name="about_application_text">Finance App is a demo application.</string>
    <string name="account_no">Account No</string>
    <string name="accept">Accept</string>
    <string name="accounts">Accounts</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="address">Address</string>
    <string name="all_amount">All Amount</string>
    <string name="amount">Amount</string>
    <string name="application_language">Application Language</string>
    <string name="approve">Approve</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_account_saved_message">Bank account has saved successfully.</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="buyer">Buyer</string>
    <string name="cancel">Cancel</string>
    <string name="circular_of_signature">Circular of Signature</string>
    <string name="city">City</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_success_message">Your password has changed successfully.</string>
    <string name="change_request_reason_text">You can type the reason of your change request.</string>
    <string name="check_bond_report">Check / Bond Report</string>
    <string name="choose_from_device">Choose from Device</string>
    <string name="company_info">Company Info</string>
    <string name="company_name">Company Name</string>
    <string name="company_name_length_warning">You must type a valid company name.</string>
    <string name="company_name_warning">You must type your company name.</string>
    <string name="company_profile">Company Profile</string>
    <string name="company_profile_saved_successfully">Company profile is saved successfully.</string>
    <string name="complete">Complete</string>
    <string name="confirm">Confirm</string>
    <string name="continue_">Continue</string>
    <string name="contract">Contract</string>
    <string name="contract_number">Contract Number</string>
    <string name="county">County</string>
    <string name="create_date">Create Date</string>
    <string name="create_new_account">Create New Account</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_not_exists_warning">You must type your current password.</string>
    <string name="customer">Customer</string>
    <string name="customer_info">Customer Info</string>
    <string name="customer_representative">Customer Representative</string>
    <string name="data_protection_permission_warning">You must accept the permission to protect data.</string>
    <string name="day_s">Day(s)</string>
    <string name="debtor_name">Debtor Name</string>
    <string name="debtor_quote_approval_success_message">TEB İSTANBUL KURUMSAL ŞUBE\nTL HESAP 266781 TR660003200001200000266781\nVadesiz USD 267194 TR700003200001200000267194\nVadesiz EUR 278580 TR410003200001200000278580</string>
    <string name="debtor_tax_no">Debtor Tax No</string>
    <string name="decline">Decline</string>
    <string name="decline_request_reason_text">You can type the reason of your decline request.</string>
    <string name="delete_bank_account_confirm_message">Do you want to delete this account?</string>
    <string name="demand_status_approved_quote_description">Offer has been approved.</string>
    <string name="demand_status_checked_description">Invoice was checked. The offer is being prepared.</string>
    <string name="demand_status_debtor_approved_description">Debtor approved the invoice. Tap to approve the offer.</string>
    <string name="demand_status_quote_accepted_description">The offer was accepted. Awaiting Payee Approval.</string>
    <string name="demand_status_quote_prepared_description">The offer is ready. Tap here to see.</string>
    <string name="demand_status_uploaded_description">Invoice has been uploaded. Operation confirmation pending.</string>
    <string name="display_profile">Display Profile</string>
    <string name="document_upload_description">You can add photos of listed mandatory documents. If you wish, you can add your documents by entering your user information from the website.</string>
    <string name="do_you_process_the_entire_invoice_amount">Do you process the entire invoice amount?</string>
    <string name="e_invoice_hash">e-Invoice Hash</string>
    <string name="edit">Edit</string>
    <string name="eft_order">EFT Order</string>
    <string name="email">E-mail</string>
    <string name="entry_date">Entry Date</string>
    <string name="error">Error</string>
    <string name="estimated_maturity_date">Estimated Maturity Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="extract">Extract</string>
    <string name="file_choosing_info_for_invoice">You can take photos of your invoices and send us easily.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Please type the phone number that you used when you registered if you forgot your password.</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_warning">You must type your full name.</string>
    <string name="hello">Hello</string>
    <string name="iban_no">IBAN No</string>
    <string name="info">Info</string>
    <string name="interest">Interest</string>
    <string name="interest_rate">Invoice Rate</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="invoice_approval">Invoice Approval</string>
    <string name="invoice_assessment_description">The amount that you see above is calculated based on the maturity date that declared by the payee.</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_debtor">Invoice Debtor</string>
    <string name="invoice_detail">Invoice Detail</string>
    <string name="invoice_info">Invoice Info</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="invoice_report">Invoice Report</string>
    <string name="invoice_upload_success_message">Your request has been processed. We will return to you as soon as possible. MOBILE SIGNATURE is required for ongoing processes. For your information.</string>
    <string name="invoice_upload_settings_description">The amount you see above is calculated according to the maturity date declared by the payee.</string>
    <string name="invoices">Invoices</string>
    <string name="invoices_waiting_for_approval">Invoices Waiting for Approval</string>
    <string name="is_whole_cost">Is Whole Cost</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="login_description">Welcome to Finance App</string>
    <string name="logout">Logout</string>
    <string name="maturity">Maturity</string>
    <string name="maturity_date">Maturity Date</string>
    <string name="mobile_signature_info">Mobile signature is required to complete your factoring transactions which started via the application.</string>
    <string name="mobile_signature">Mobile Signature</string>
    <string name="mobile_signature_result_success">Mobile signature processes has been completed successfully.</string>
    <string name="mobile_signature_result_declined">Your transaction declined.\nPlease contact with your mobile</string>
    <string name="mobile_signature_desc">Your mobile signature process has been started.\nPlease compare the fingerprint to be provided to your company\'s representative with following fingerprint.</string>
    <string name="mobile_signature_dialog_title">Your mobile signature process will be started</string>
    <string name="more_invoices">{number} more invoices</string>
    <string name="more_processes">{number} more processes</string>
    <string name="more_quotes">{number} more quotes</string>
    <string name="my_active_factoring_processes">My Active Factoring Processes</string>
    <string name="new_password">New Password</string>
    <string name="new_password_not_exists_warning">You must type your new password.</string>
    <string name="new_password_repeat">New Password (Repeat)</string>
    <string name="no">No</string>
    <string name="no_active_processes_info">You have no active processes.</string>
    <string name="no_waiting_invoice_for_approval_info">There\'s no invoices for your approval.</string>
    <string name="no_recent_invoices_info">You have no saved invoices.</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="online_operations">Online Operations</string>
    <string name="operation_date">Operation Date</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="password_length_warning">Password must contain six characters.</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="password_repeat_warning">Password Repeat must be same as Password</string>
    <string name="password_not_exists_warning">You must type your password.</string>
    <string name="payee_info">Payee Info</string>
    <string name="payee_name">Payee Name</string>
    <string name="payment_info">Payment Info</string>
    <string name="permission_to_protect_personal_data">Permission to Protect Personal Data</string>
    <string name="phone_number">Phone Number</string>
    <string name="post_code">Post Code</string>
    <string name="quote_description">This offer is valid if the maturity and amount are approved by the debtor.</string>
    <string name="refresh_password">Refresh Password</string>
    <string name="register">Register</string>
    <string name="register_description">Enter your information to become a Finance App user.</string>
    <string name="remember_me">Remember Me</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="tax_no">Tax No</string>
    <string name="tax_office">Tax Office</string>
    <string name="upload_file">Upload File</string>
    <string name="user_agreement">User Agreement</string>
</resources>