<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gelistirmen.finance.presentation.activity.ChangePasswordActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_unlocked_large"
                android:layout_margin="16dp"/>

            <TextView style="@style/ParagraphTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginVertical="16dp"
                android:text="@string/refresh_password" />

            <TextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"
                android:text="@string/sample_medium_text" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText.Password"
                android:id="@+id/currentPasswordEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/current_password" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText.Password"
                android:id="@+id/newPasswordEditText"
                android:hint="@string/new_password" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText.Password"
                android:id="@+id/passwordRepeatEditText"
                android:hint="@string/new_password_repeat" />

            <com.gelistirmen.finance.presentation.view.FMButton
                style="@style/DarkButton"
                android:id="@+id/continueButton"
                android:layout_marginTop="24dp"
                android:drawableRight="@drawable/ic_right_arrow_white"
                android:text="@string/continue_" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
