<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView style="@style/ContentTitle"
        android:id="@+id/titleTextView"
        android:text="@string/sample_text"
        android:layout_marginTop="32dp" />

    <com.gelistirmen.finance.presentation.view.FMButton
        style="@style/ContentButton.Medium"
        android:id="@+id/uploadButton"
        android:drawableLeft="@drawable/ic_folder_upload_black"
        android:drawableRight="@drawable/ic_right_arrow_black"
        android:text="@string/upload_file" />

    <com.gelistirmen.finance.presentation.view.FMButton
        style="@style/ContentButton.Medium"
        android:id="@+id/takePhotoButton"
        android:drawableLeft="@drawable/ic_camera_black"
        android:drawableRight="@drawable/ic_right_arrow_black"
        android:text="@string/take_photo" />

</LinearLayout>