<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="com.gelistirmen.finance.presentation.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/finance_app_full" />

        <TextView style="@style/ParagraphTitle"
            android:layout_marginVertical="16dp"
            android:text="@string/login" />

        <TextView style="@style/Paragraph"
            android:layout_marginVertical="16dp"
            android:text="@string/login_description" />

        <com.gelistirmen.finance.presentation.view.FMEditText
            style="@style/EditText"
            android:id="@+id/phoneNumberEditText"
            android:layout_marginTop="16dp"
            android:digits="0123456789"
            android:drawableLeft="@drawable/ic_phone_black"
            android:hint="@string/phone_number"
            android:inputType="number"
            app:format="(###) ### ## ##" />

        <com.gelistirmen.finance.presentation.view.FMEditText
            style="@style/EditText"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_unlocked_black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30" />

        <com.gelistirmen.finance.presentation.view.FMCheckBox
            style="@style/CheckBox"
            android:id="@+id/rememberMeCheckBox"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:text="@string/remember_me" />

        <com.gelistirmen.finance.presentation.view.FMButton
            style="@style/DarkButton"
            android:id="@+id/loginButton"
            android:layout_marginTop="24dp"
            android:drawableRight="@drawable/ic_right_arrow_white"
            android:text="@string/login" />

        <com.gelistirmen.finance.presentation.view.FMButton
            style="@style/TextButton"
            android:id="@+id/forgotPasswordButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password" />

    </LinearLayout>

</ScrollView>
