<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gelistirmen.finance.presentation.activity.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:src="@drawable/finance_app_full" />

            <TextView style="@style/ParagraphTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginVertical="16dp"
                android:text="@string/register" />

            <TextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"
                android:text="@string/register_description" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText"
                android:id="@+id/nameEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/full_name"
                android:drawableLeft="@drawable/ic_user" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText"
                android:id="@+id/phoneNumberEditText"
                android:inputType="number"
                android:hint="@string/phone_number"
                app:format="(###) ### ## ##"
                android:drawableLeft="@drawable/ic_phone_black" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText"
                android:id="@+id/companyNameEditText"
                android:hint="@string/company_name"
                android:drawableLeft="@drawable/ic_fountain_pen" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText"
                android:id="@+id/passwordEditText"
                android:inputType="textPassword"
                android:maxLength="30"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_unlocked_black" />

            <com.gelistirmen.finance.presentation.view.FMEditText
                style="@style/EditText"
                android:id="@+id/passwordRepeatEditText"
                android:inputType="textPassword"
                android:maxLength="30"
                android:hint="@string/password_repeat"
                android:drawableLeft="@drawable/ic_unlocked_black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <com.gelistirmen.finance.presentation.view.FMCheckBox
                    style="@style/CheckBox"
                    android:id="@+id/userAgreementCheckbox"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/user_agreement" />

                <ImageButton
                    android:id="@+id/userAgreementButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:padding="12dp"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_right_arrow_black" />

            </FrameLayout>


            <com.gelistirmen.finance.presentation.view.FMCheckBox
                style="@style/CheckBox"
                android:id="@+id/permissionCheckbox"
                android:layout_gravity="left"
                android:text="@string/permission_to_protect_personal_data" />

            <com.gelistirmen.finance.presentation.view.FMButton
                style="@style/RedButton"
                android:id="@+id/registerButton"
                android:layout_marginTop="24dp"
                android:drawableRight="@drawable/ic_right_arrow_white"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
